--- a/AmicaleINSA/Base.lproj/Main.storyboard
+++ b/AmicaleINSA/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -31,7 +30,7 @@
             </objects>
             <point key="canvasLocation" x="370" y="372"/>
         </scene>
-        <!--Post Table View Controller-->
+        <!--News-->
         <scene sceneID="t9q-5p-jxz">
             <objects>
                 <tableViewController id="54D-Sv-asx" customClass="PostTableViewController" customModule="AmicaleINSA" customModuleProvider="target" sceneMemberID="viewController">
@@ -170,7 +169,7 @@
                             <outlet property="delegate" destination="54D-Sv-asx" id="FdZ-yD-laA"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="POj-fL-gAP">
+                    <navigationItem key="navigationItem" title="News" id="POj-fL-gAP">
                         <barButtonItem key="leftBarButtonItem" image="menu" id="SuN-Sw-tmz">
                             <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
